--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,14 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="79ec67">  <td>21/11/29 19:31:49</td>   <td>0</td> <td title="&gt;&gt;BaseClass.copy()[pri:0, instance:com.Tests.TC007_GenericManagenent_Investigation_Types@6eda5c9]">&gt;&gt;copy</td> 
+<tr bgcolor="79ec67">  <td>21/11/30 14:13:25</td>   <td>0</td> <td title="&gt;&gt;BaseClass.copy()[pri:0, instance:com.Tests.TC_000_Login@6eda5c9]">&gt;&gt;copy</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@382750013</td>   <td></td> </tr>
-<tr bgcolor="79ec67">  <td>21/11/29 19:31:50</td>   <td>203</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.broswerConfig(java.lang.String)[pri:0, instance:com.Tests.TC007_GenericManagenent_Investigation_Types@6eda5c9]">&gt;&gt;broswerConfig</td> 
+<tr bgcolor="79ec67">  <td>21/11/30 14:13:25</td>   <td>194</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.broswerConfig(java.lang.String)[pri:0, instance:com.Tests.TC_000_Login@6eda5c9]">&gt;&gt;broswerConfig</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@382750013</td>   <td></td> </tr>
-<tr bgcolor="79ec67">  <td>21/11/29 19:31:52</td>   <td>2315</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.login()[pri:0, instance:com.Tests.TC007_GenericManagenent_Investigation_Types@6eda5c9]">&gt;&gt;login</td> 
+<tr bgcolor="79ec67">  <td>21/11/30 14:13:27</td>   <td>2240</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.login()[pri:0, instance:com.Tests.TC_000_Login@6eda5c9]">&gt;&gt;login</td> 
 <td>&nbsp;</td>  <td>main@382750013</td>   <td></td> </tr>
-<tr bgcolor="776cc1">  <td>21/11/29 19:31:54</td>   <td>4583</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC007_GenericManagenent_Investigation_Types.Types()[pri:-1, instance:com.Tests.TC007_GenericManagenent_Investigation_Types@6eda5c9]">Types</td> 
+<tr bgcolor="776cc1">  <td>21/11/30 14:13:32</td>   <td>7618</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_000_Login.Login()[pri:-1, instance:com.Tests.TC_000_Login@6eda5c9]">Login</td> 
   <td>main@382750013</td>   <td></td> </tr>
-<tr bgcolor="79ec67">  <td>21/11/29 19:32:39</td>   <td>49664</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.close()[pri:0, instance:com.Tests.TC007_GenericManagenent_Investigation_Types@6eda5c9]">&lt;&lt;close</td> 
+<tr bgcolor="79ec67">  <td>21/11/30 14:13:38</td>   <td>13307</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.close()[pri:0, instance:com.Tests.TC_000_Login@6eda5c9]">&lt;&lt;close</td> 
 <td>&nbsp;</td>  <td>main@382750013</td>   <td></td> </tr>
 </table>
